# pac

./: CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  macbook_sf30_join  repro.txt  run_tests_1000.sh  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmark/: pac_clickhouse_benchmark.cpp  pac_tpch_benchmark.cpp  pac_tpch_compiler_benchmark.cpp  pac_tpch_schema.sql  plot_clickbench_results.R  plot_tpch_results.R  utility_tpch.sql
benchmark/clickbench_queries/: queries.sql
benchmark/include/: pac_tpch_benchmark.hpp
benchmark/pac_microbench/: README.md  analyze_results.py  approx_sum_stability.sql  bench_count.sh  bench_min_max.sh  bench_sum_avg.sh  binomial.out  binomial.sql  build_variants.sh  common.sh  create_test_db.sh  install_r_dependencies.sh  plot_all.R  plot_count_optimizations.py  plot_hash_distribution.py  plot_microbench_results.R  plot_minmax_optimizations.py  plot_simd_improvements.py  plot_sum_optimizations.py  run_all.sh
benchmark/tpch_pac_naive_queries/: q03.sql  q18.sql
benchmark/tpch_pac_queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08-nolambda.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql
benchmark/tpch_pac_simple_hash_queries/: q01.sql  q02.sql  q03.sql  q08.sql  q10.sql  q11.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q20.sql
docs/: README.md
docs/benchmark/: README.md  clickbench.md  microbenchmarks.md  tpch.md  tpch_compiler.md
docs/pac/: README.md  utility.md
docs/test/: README.md
src/: pac_aggregate.cpp  pac_avg.cpp  pac_bitslice_compiler.cpp  pac_categorical.cpp  pac_categorical_rewriter.cpp  pac_compatibility_check.cpp  pac_compiler.cpp  pac_compiler_helpers.cpp  pac_count.cpp  pac_expression_builder.cpp  pac_extension.cpp  pac_helpers.cpp  pac_metadata_manager.cpp  pac_metadata_serialization.cpp  pac_min_max.cpp  pac_optimizer.cpp  pac_parser.cpp  pac_parser_helpers.cpp  pac_plan_traversal.cpp  pac_privacy_unit.cpp  pac_projection_propagation.cpp  pac_subquery_handler.cpp  pac_sum.cpp  pac_sum_avg.cpp  test_pac_privacy_columns.cpp  test_update_parent_runner.cpp
src/aggregates/: pac_aggregate.cpp  pac_aggregate_hash.cpp  pac_avg.cpp  pac_count.cpp  pac_min_max.cpp  pac_sum.cpp
src/categorical/: pac_categorical.cpp  pac_categorical_rewriter.cpp
src/compiler/: pac_bitslice_compiler.cpp  pac_compiler_helpers.cpp
src/core/: pac_extension.cpp  pac_optimizer.cpp  pac_privacy_unit.cpp
src/diff/: pac_utility_diff.cpp  pac_utility_summary.cpp
src/include/: pac_aggregate.hpp  pac_avg.hpp  pac_bitslice_compiler.hpp  pac_categorical.hpp  pac_categorical_rewriter.hpp  pac_compatibility_check.hpp  pac_compiler.hpp  pac_compiler_helpers.hpp  pac_count.hpp  pac_expression_builder.hpp  pac_helpers.hpp  pac_metadata_manager.hpp  pac_min_max.hpp  pac_optimizer.hpp  pac_parser.hpp  pac_plan_traversal.hpp  pac_privacy_unit.hpp  pac_projection_propagation.hpp  pac_sum.hpp  pac_sum_avg.hpp
src/metadata/: pac_compatibility_check.cpp  pac_metadata_manager.cpp  pac_metadata_serialization.cpp
src/parser/: pac_parser.cpp  pac_parser_helpers.cpp
src/query_processing/: pac_expression_builder.cpp  pac_fk_resolver.cpp  pac_join_builder.cpp  pac_plan_traversal.cpp  pac_projection_propagation.cpp  pac_subquery_handler.cpp
src/test/: test_compiler_functions.cpp  test_pac_parser.cpp  test_pac_privacy_columns.cpp  test_plan_traversal.cpp  test_runner.cpp  test_schema_metadata.cpp
src/utils/: pac_helpers.cpp
test/: README.md
test/sql/: pac_aggregate.test  (+20 more)
(+61 files in other folders)
